# acscii

./: main.py  old.py  pyproject.toml  test_main.py  text1
color/: main.py
justify/: README.md
output/: main.py  output.txt
