[tool.poetry]
name = "ascii-p"
version = "0.1.0"
description = ""
authors = ["Nurs <nursultanerbakytuly88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
somecommand = "tmp:main"
